helios-library-app/src/objects/Checkout__c.object
<CustomObject>
    <fields>
        <fullName>Book_Copy__c</fullName>
        <label>Book</label>
        <referenceTo>Book_Copy__c</referenceTo>
        <relationshipLabel>Checkouts</relationshipLabel>
        <relationshipName>Checkouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>IF(Is_Current__c,  MAX(TODAY() -  Due_Date__c, 0), NULL)</formula>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>CreatedDate  + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Current__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Whether this checkout is currently active.</inlineHelpText>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Email_1__c</fullName>
        <description>Set on creation. Used to send reminders to parents.</description>
        <label>Parent Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Email_2__c</fullName>
        <description>Set on creation. Used to send reminders to parents.</description>
        <label>Parent Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <formula>CreatedDate + 11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checkouts</relationshipLabel>
        <relationshipName>Checkouts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Times_Renewed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Times Renewed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Checkout</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Checkout Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>